--- a/bin/bigtwo/userinterface/CardGameLayout.fxml
+++ b/bin/bigtwo/userinterface/CardGameLayout.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="556.0" prefWidth="733.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bigtwo.userinterface.CardGameController">
@@ -25,7 +27,7 @@
       </HBox>
 
       <!-- Last CardList -->
-      <HBox alignment="CENTER" spacing="10.0" AnchorPane.topAnchor = "210.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <HBox alignment="CENTER" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="210.0">
          <children>
             <HBox fx:id="lastCardListBox" alignment="CENTER" prefHeight="25.0" prefWidth="100.0" styleClass="speacial-card-box" stylesheets="@style.css" />
          </children>
@@ -58,5 +60,44 @@
             <Glow />
          </effect>
       </Label>
+      <Label fx:id="player1Name" layoutX="89.0" layoutY="33.0" text="52" textFill="#0ffcf5">
+         <font>
+            <Font name="Arial Bold" size="20.0" />
+         </font>
+         <effect>
+            <Glow />
+         </effect>
+      </Label>
+      <Label fx:id="player2Name" layoutX="301.0" layoutY="33.0" text="52" textFill="#0ffcf5">
+         <font>
+            <Font name="Arial Bold" size="20.0" />
+         </font>
+         <effect>
+            <Glow />
+         </effect>
+      </Label>
+      <Label fx:id="player3Name" layoutX="502.0" layoutY="33.0" text="52" textFill="#0ffcf5">
+         <font>
+            <Font name="Arial Bold" size="20.0" />
+         </font>
+         <effect>
+            <Glow />
+         </effect>
+      </Label>
+      <VBox fx:id="endGamePane" alignment="CENTER" layoutX="97.0" layoutY="59.0" prefHeight="400.0" prefWidth="560.0">
+         <children>
+            <StackPane prefHeight="205.0" prefWidth="560.0">
+               <children>
+                  <Label fx:id="endGameText" alignment="CENTER" prefHeight="111.0" prefWidth="491.0" text="Game over" />
+               </children>
+            </StackPane>
+            <HBox alignment="BOTTOM_CENTER" prefHeight="27.0" prefWidth="560.0" spacing="200.0" translateY="83.0">
+               <children>
+                  <Button fx:id="newGameButton" alignment="CENTER" mnemonicParsing="false" onAction="#newGame" text="New game" textAlignment="CENTER" />
+                  <Button fx:id="quitGameButton" alignment="CENTER" layoutX="253.0" layoutY="10.0" mnemonicParsing="false" onAction="#quitGame" text="Quit" textAlignment="CENTER" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
